fixed /about padding on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -4,7 +4,7 @@
 	margin-bottom: $margin-xs;
 	padding: 0;
 	h4 {
-		padding: 0 1em;
+		padding: 0 20px;
 	}
 	p {
 		margin-bottom: $margin-s;
@@ -15,7 +15,7 @@
 		font-weight: 400;
 		line-height: 1.6;
 		color: $text-color;
-		padding: 0 1em;
+		padding: 0 20px;
 	}
 	a {
 		color: $secondary;
